	Deleting towns/nations will put any leftover money in the banks into the spoils of war for the next war.
	Winning nation receives half the spoils of war. Town with the highest score receives the other half.
	Builds on Essentials for Town Spawn teleports and teleport cost.
v0.16:
	Price for death during war. If a resident can't pay, its provided by the town. If the town is broke, town is removed from war.
	Price for death for if not at war. Non player deaths will give the money to spoils of war pot.
	Price for losing a townblock during war. If town is broke, town is removed from war.
	War works, it has a fair amount of message spam that will be streamlined as soon as I know the mechanics work.
v0.17:
	Mob removal
	Reload not actually reloading.
v0.18:
	Fixed set perm using friend as an alias for resident.
	Town and nation banks get moved when renaming.
	Rewrote block permissions to cache the status of the current TownBlock (Wilderness, WarZone, etc).
	Ignore protection in wilderness for particular blocks. (unclaimed_zone_ignore)
	Automatically change config if an optional plugin isn't installed.
	Town assistants can now set plots for sale.
	During war. The death of a mayor or king will remove the town/nation from war.
	Defeating a townblock during war will give your town +1 bonus, and the enemy town -1 bonus.
	Resident perms load on boot now.
	Added command "/towny top" to show a few highscore lists.
	Added permission:
		towny.spawntp (To let a player use /town spawn [town] even when ALLOW_TOWN_SPAWN_TRAVEL=false)
v0.19:
	Forgot to override with build and switch for wild ignore blocks.
	Moved all timers to Bukkits Scheduler.
	Bug fixes for war.
v0.20:
	Quick fix for town notifications.
v0.21:
	Added add+/remove+ to select offline residents.
v0.22:
	Nation server upkeep is now taken. 
	
TODO:	
	
	Ability to convert from hMod database. Not really recommended.
	Ability to make NPC Residents profiles (not actual human entities). /townyadmin set mayor [town] npc