@@ -4,4 +4,5 @@ import java.util.List;
 
 public interface ResidentList {
 	public List<Resident> getResidents();
+	public boolean hasResident(String name);
 }
